--- a/inst/markdown/04.snowcrab_fishery_model_turing.md
+++ b/inst/markdown/04.snowcrab_fishery_model_turing.md
@@ -49,7 +49,7 @@ Here we read in these results and prepare (format) them for timeseries analysis.
   p = bio.snowcrab::load.environment( year.assessment=year.assessment )
   modeldir = p$modeldir
   snowcrab_filter_class = "fb"     # fishable biomass (including soft-shelled )  "m.mat" "f.mat" "imm"
-  carstm_model_label = paste( "1999_present", snowcrab_filter_class, sep="_" )
+  carstm_model_label = paste( "default", snowcrab_filter_class, sep="_" )
   fishery_model_label = "turing1"
   carstm_results_directory = file.path( modeldir, carstm_model_label, "fishery_model_results", fishery_model_label ) # default
   
@@ -86,7 +86,7 @@ There are two ways you can use this.
 
   rootdir = homedir()
   project_directory = joinpath( rootdir, "bio", "bio.snowcrab", "inst", "julia" ) 
-  bio_data_directory = joinpath( rootdir, "bio.data", "bio.snowcrab", "modelled", "1999_present_fb", "fishery_model_results", "turing1"  )
+  bio_data_directory = joinpath( rootdir, "bio.data", "bio.snowcrab", "modelled", "default_fb", "fishery_model_results", "turing1"  )
   outputs_directory = joinpath( rootdir, "bio.data", "bio.snowcrab", "fishery_model" ) 
  
   model_variation = "logistic_discrete_historical"   
@@ -216,7 +216,7 @@ Here some of the outputs can be seen below:
     
 \begin{tiny}
 ```{r fbindex-timeseries, out.width='60%', echo=FALSE, fig.align='center', fig.cap = 'The fishable biomass index (t) predicted by CARSTM of Snow Crab survey densities. Error bars represent Bayesian 95\\% Credible Intervals. Note large errors in 2020 when there was no survey.' }
-include_graphics( file.path( SCD, 'modelled', '1999_present_fb', 'aggregated_biomass_timeseries' , 'biomass_M0.png') )
+include_graphics( file.path( SCD, 'modelled', 'default_fb', 'aggregated_biomass_timeseries' , 'biomass_M0.png') )
 # \@ref(fig:fbindex-timeseries)
 ```
 \end{tiny}
