--- a/inst/markdown/snowcrab_working_paper.rmd
+++ b/inst/markdown/snowcrab_working_paper.rmd
@@ -111,7 +111,7 @@ Alter directories to reflect setup or copy Makefile and alter defaults to your n
   setorderv(counts, "Frequency", order=-1)
   
   # species composition
-  psp = speciescomposition_parameters( yrs=p$yrs, runlabel="1999_present" )
+  psp = speciescomposition_parameters( yrs=p$yrs, carstm_model_label="default" )
   pca = speciescomposition_db( DS="pca", p=psp )  
 
   pcadata = as.data.frame( pca$loadings )
@@ -818,7 +818,7 @@ include_graphics( c(fn6, fn5, fn4, fn3, fn2, fn1) )
  
 
 ```{r fbindex-map, echo=FALSE, out.width='45%', fig.show='hold', fig.align='center', fig.cap= 'Biomass index log~10(t/km$^2$)  predicted from the Snow Crab survey.' }
-loc = file.path( SCD, 'modelled', '1999_present_fb', 'predicted_biomass_densities' )
+loc = file.path( SCD, 'modelled', 'default_fb', 'predicted_biomass_densities' )
 yrsplot =  year.assessment + c(0:-10)
 fn10 = file.path( loc, paste( 'biomass', yrsplot[10], 'png', sep='.') )
 fn9 = file.path( loc, paste( 'biomass', yrsplot[9], 'png', sep='.') )
@@ -838,7 +838,7 @@ include_graphics( c( fn8, fn7, fn6, fn5, fn4, fn3, fn2, fn1) )
 
 
 ```{r fbindex-timeseries, out.width='80%', echo=FALSE, fig.align='center', fig.cap = 'The fishable biomass index (t) predicted by CARSTM of Snow Crab survey densities. Error bars represent Bayesian 95\\% Credible Intervals. Note large errors in 2020 when there was no survey.' }
-include_graphics( file.path( SCD, 'modelled', '1999_present_fb', 'predicted_biomass_densities', 'biomass_M0.png') )
+include_graphics( file.path( SCD, 'modelled', 'default_fb', 'predicted_biomass_densities', 'biomass_M0.png') )
 # \@ref(fig:fbindex-timeseries)
 ```
 
@@ -901,7 +901,7 @@ include_graphics( file.path( SCD, 'assessments', year.assessment, 'timeseries', 
  
 
 ```{r bottom-temperatures-spatialeffect, out.width='200%', echo=FALSE, fig.align='center', fig.cap = 'Persistent spatial effect of bottom temperature, relative to the overall mean, after adjustment for spatiotemporal variability and autocorrelations. Time period from 1999 to present.' }
-loc = file.path( data_root, 'aegis', 'temperature', 'maps', '1999_present' )
+loc = file.path( data_root, 'aegis', 'temperature', 'maps', 'default' )
 include_graphics( file.path( loc, 'Predicted_habitat_probability_persistent_spatial_effect.png') )
 # \@ref(fig:bottom-temperatures-spatialeffect)
 ```
@@ -910,7 +910,7 @@ include_graphics( file.path( loc, 'Predicted_habitat_probability_persistent_spat
 
 ```{r bottom-temperatures-map, out.width='45%', echo=FALSE, fig.show='hold', fig.align='center', fig.cap = 'Spatial variations in bottom temperature estimated from a historical analysis of temperature data for 1 September.' }
 
-loc = file.path( data_root, 'aegis', 'temperature', 'maps', '1999_present' )
+loc = file.path( data_root, 'aegis', 'temperature', 'maps', 'default' )
 yrsplot =  year.assessment + c(0:-10)
 fn10 = file.path( loc, paste( 'Bottom-temperature-',  yrsplot[10], '-0.75',  '.png', sep='') )
 fn9  = file.path( loc, paste( 'Bottom-temperature-',  yrsplot[9],  '-0.75',  '.png', sep='') )
@@ -934,7 +934,7 @@ include_graphics( c( fn6, fn5, fn4, fn3, fn2, fn1) )
 
 
 ```{r fb-habitat-timeseries, out.width='80%', echo=FALSE,   fig.align='center', fig.cap = 'Habitat viability (probability; fishable Snow Crab). Means and 95\\% Credible Intervals are presented.' }
-loc = file.path( SCD, 'modelled', '1999_present_fb', 'aggregated_habitat_timeseries' )
+loc = file.path( SCD, 'modelled', 'default_fb', 'aggregated_habitat_timeseries' )
 include_graphics( file.path( loc, 'habitat_M0.png') )
 # \@ref(fig:fb-habitat-timeseries)
 ```
@@ -943,7 +943,7 @@ include_graphics( file.path( loc, 'habitat_M0.png') )
  
 
 ```{r fb-habitat-map, out.width='45%', fig.show='hold', fig.align='center', fig.cap= 'Habitat viability (probability; fishable Snow Crab).' }
-loc = file.path( SCD, 'modelled', '1999_present_fb', 'predicted.presence_absence' )
+loc = file.path( SCD, 'modelled', 'default_fb', 'predicted.presence_absence' )
 yrsplot =  year.assessment + c(0:-10)
 fn10 = file.path( loc, paste( 'Predicted_presence_absence_', yrsplot[10], '.png', sep='') )
 fn9 = file.path( loc, paste( 'Predicted_presence_absence_', yrsplot[9], '.png', sep='') )
