--- a/inst/markdown/03.biomass_index_carstm.md
+++ b/inst/markdown/03.biomass_index_carstm.md
@@ -46,20 +46,23 @@ The convolution of all three after posterior simulation is also known as a Hurdl
   require(aegis)
   require(bio.snowcrab)   # loadfunctions("bio.snowcrab") 
 
+  year.start = 1999
   year.assessment = 2023
   
-  yrs = 1999:year.assessment
+  yrs = year.start:year.assessment
+
   spec_bio = bio.taxonomy::taxonomy.recode( from="spec", to="parsimonious", tolookup=2526 )
+  
   snowcrab_filter_class = "fb"     # fishable biomass (including soft-shelled )  "m.mat" "f.mat" "imm"
    
-  runlabel= paste( "1999_present", snowcrab_filter_class, sep="_" )
+  carstm_model_label= paste( "default", snowcrab_filter_class, sep="_" )
 
   # params for number
   pN = snowcrab_parameters(
     project_class="carstm",
     yrs=yrs,   
     areal_units_type="tesselation",
-    carstm_model_label= runlabel,  
+    carstm_model_label= carstm_model_label,  
     selection = list(
       type = "number",
       biologicals=list( spec_bio=spec_bio ),
@@ -72,13 +75,12 @@ The convolution of all three after posterior simulation is also known as a Hurdl
     project_class="carstm",
     yrs=yrs,   
     areal_units_type="tesselation",
-    carstm_model_label= runlabel,  
+    carstm_model_label= carstm_model_label,  
     selection = list(
       type = "meansize",
       biologicals=list( spec_bio=spec_bio ),
       biologicals_using_snowcrab_filter_class=snowcrab_filter_class
     )
-
   )
 
   # params for probability of observation
@@ -86,7 +88,7 @@ The convolution of all three after posterior simulation is also known as a Hurdl
     project_class="carstm", 
     yrs=yrs,  
     areal_units_type="tesselation", 
-    carstm_model_label= runlabel,  
+    carstm_model_label= carstm_model_label,  
     selection = list(
       type = "presence_absence",
       biologicals=list( spec_bio=spec_bio ),
@@ -165,6 +167,18 @@ Each variable is modelled with the same covariates.
       num.threads="4:3"  
     )
 
+    # posterior predictive check
+    carstm_posterior_predictive_check(p=p, M=M[ iq, ]  )
+
+    # EXAMINE POSTERIORS AND PRIORS
+    res = carstm_model(  p=pN, DS="carstm_summary" )  # parameters in p and summary
+
+    names(res$hypers)
+    for (i in 1:length(names(res$hypers)) ){
+      o = carstm_prior_posterior_compare( hypers=res$hypers, all.hypers=res$all.hypers, vn=names(res$hypers)[i] )  
+      dev.new(); print(o)
+    }     
+
 
     # mean size
     res = NULL; gc()
@@ -179,6 +193,19 @@ Each variable is modelled with the same covariates.
       # control.inla = list( strategy="laplace", int.strategy="eb" ),  
       num.threads="4:3" 
     ) 
+
+    # posterior predictive check
+    carstm_posterior_predictive_check(p=p, M=M[ iw, ]  )
+
+    # EXAMINE POSTERIORS AND PRIORS
+    res = carstm_model(  p=pW, DS="carstm_summary" )  # parameters in p and summary
+
+    names(res$hypers)
+    for (i in 1:length(names(res$hypers)) ){
+      o = carstm_prior_posterior_compare( hypers=res$hypers, all.hypers=res$all.hypers, vn=names(res$hypers)[i] )  
+      dev.new(); print(o)
+    }     
+
 
     # model pa using all data
     res = NULL; gc()
@@ -195,6 +222,20 @@ Each variable is modelled with the same covariates.
       num.threads="4:3"
     )
  
+    # posterior predictive check
+    carstm_posterior_predictive_check(p=p, M=M[ , ]  )
+
+    # EXAMINE POSTERIORS AND PRIORS
+    res = carstm_model(  p=pH, DS="carstm_summary" )  # parameters in p and summary
+
+    names(res$hypers)
+    for (i in 1:length(names(res$hypers)) ){
+      o = carstm_prior_posterior_compare( hypers=res$hypers, all.hypers=res$all.hypers, vn=names(res$hypers)[i] )  
+      dev.new(); print(o)
+    }     
+
+  
+
   # end spatiotemporal model
 
   # some maps and plots
@@ -255,107 +296,28 @@ Each variable is modelled with the same covariates.
       }
 
    
-      res = carstm_model( p=p, DS="carstm_modelled_summary",  sppoly = sppoly ) # to load currently saved results
+      # to load currently saved results
+      res = carstm_model( p=p,  DS="carstm_summary" )  # parameters in p and direct summary
+      res$direct
+      res = NULL; gc()
 
-      # maps
-      vn = c( "random", "space", "combined" ) 
-      toplot = carstm_results_unpack( res, vn )
-      brks = pretty(  quantile(toplot[,"mean"], probs=c(0,0.975), na.rm=TRUE )  )
-
-      carstm_map(  res=res, vn=vn, 
-        sppoly = sppoly, 
-        breaks = brks,
-        palette="-RdYlBu",
-        plot_elements="",
-        additional_features=additional_features,
-        legend.position=c( 0.08, 0.865 ),
-        annotation="spatial effect",
-        outfilename=outfilename
-      )  
-    
-
-      vn="predictions"
-      toplot = carstm_results_unpack( res, vn )
-      brks = pretty(  quantile(toplot[,,"mean"], probs=c(0,0.975), na.rm=TRUE )  )
-
-      for (y in res$time_id ){
-        tmatch = as.character(y)
-        fn_root = paste(fn_root_prefix, paste0(tmatch, collapse="-"), sep="_")
-        outfilename = file.path( outputdir, paste(fn_root, "png", sep=".") )
-
-        carstm_map(  res=res, vn=vn, tmatch=tmatch,
-          sppoly = sppoly, 
-          breaks =brks,
-          palette="-RdYlBu",
-          plot_elements="",
-          # plot_elements=c(   "compass", "scale_bar", "legend" ),
-          additional_features=additional_features,
-          legend.position=c( 0.08, 0.865 ),
-          annotation=y, 
-#          title=paste(fn_root_prefix, snowcrab_filter_class,  paste0(tmatch, collapse="-") )
-          outfilename=outfilename
-        )
-       
-      }
-
-      
 
       # plots with 95% PI
       oeffdir = file.path( outputdir, fn_root_prefix, "effects" )
-      if ( !file.exists(oeffdir)) dir.create( oeffdir, recursive=TRUE, showWarnings=FALSE )
+      
+      carstm_plot_marginaleffects( p, oeffdir, fn_root ) 
+   
 
-      (fn = file.path( oeffdir, "time.png"))
-      png( filename=fn, width=1024, height=1024, pointsize=12, res=196 )
-        carstm_plotxy( res, vn=c( "res", "random", "time" ), 
-          type="b",  xlab="Year", ylab=ylab, h=0, cex=1.25, cex.axis=1.25, cex.lab=1.25   )
-      dev.off()
-
-      (fn = file.path( oeffdir, "cyclic.png"))
-      png( filename=fn, width=1024, height=1024, pointsize=12, res=196 )
-        carstm_plotxy( res, vn=c( "res", "random", "cyclic" ), 
-          type="b", col="slategray", pch=19, lty=1, lwd=2.5,  
-          xlab="Season", ylab=ylab, cex=1.25, cex.axis=1.25, cex.lab=1.25   )
-      dev.off()
-
-      (fn = file.path( oeffdir, "temperature.png"))
-      png( filename=fn, width=1024, height=1024, pointsize=12, res=196 )
-        carstm_plotxy( res, vn=c( "res", "random", "inla.group(t, method = \"quantile\", n = 13)" ), 
-          type="b", col="slategray", pch=19, lty=1, lwd=2.5 ,
-          xlab="Bottom temperature (degrees Celsius)", ylab=ylab, cex=1.25, cex.axis=1.25, cex.lab=1.25 )
-      dev.off()
-
-      (fn = file.path( oeffdir, "pca1.png"))
-      png( filename=fn, width=1024, height=1024, pointsize=12, res=196 )
-        carstm_plotxy( res, vn=c( "res", "random", "inla.group(pca1, method = \"quantile\", n = 13)" ), 
-          type="b", col="slategray", pch=19, lty=1, lwd=2.5 ,
-          xlab="PCA1", ylab=ylab, cex=1.25, cex.axis=1.25, cex.lab=1.25 )
-      dev.off()
-
-      (fn = file.path( oeffdir, "pca2.png"))
-      png( filename=fn, width=1024, height=1024, pointsize=12, res=196 )
-        carstm_plotxy( res, vn=c( "res", "random", "inla.group(pca2, method = \"quantile\", n = 13)" ), 
-          type="b", col="slategray", pch=19, lty=1, lwd=2.5 ,
-          xlab="PCA2", ylab=ylab, cex=1.25, cex.axis=1.25, cex.lab=1.25 )
-      dev.off()
-
-      (fn = file.path( oeffdir, "depth.png"))
-      png( filename=fn, width=1024, height=1024, pointsize=12, res=196 )
-        carstm_plotxy( res, vn=c( "res", "random", "inla.group(z, method = \"quantile\", n = 13)" ), 
-          type="b", col="slategray", pch=19, lty=1, lwd=2.5  ,
-          xlab="Depth (m)", ylab=ylab, cex=1.25, cex.axis=1.25, cex.lab=1.25 )
-      dev.off()
-
-
-      # (fn = file.path( outputdir, "substrate.png"))
-      # png( filename=fn, width=1024, height=1024, pointsize=12, res=196 )
-      #   carstm_plotxy( res, vn=c( "res", "random", "inla.group(substrate.grainsize, method = \"quantile\", n = 11)" ), 
-      #     type="b", col="slategray", pch=19, lty=1, lwd=2.5  ,
-      #     xlab="Substrate grain size (mm)", ylab=ylab, cex=1.25, cex.axis=1.25, cex.lab=1.25 )
-      # dev.off()
-
-
-      res = NULL; gc()
-
+      # maps of some of the results
+      outputdir = file.path(p$data_root, p$carstm_model_label, "maps" )
+       
+      carstm_plot_map( p, outputdir, fn_root_prefix , additional_features, 
+        toplot="random_spatial", probs=c(0, 0.975) ) 
+   
+      carstm_plot_map( p, outputdir, fn_root_prefix , additional_features, 
+        toplot="predictions", probs=c(0.1, 0.9)) 
+    
+  
 
       # posterior predictive check
       #vns ="number"
@@ -385,7 +347,7 @@ Each variable is modelled with the same covariates.
       }
 
       fit = NULL; gc()
-      fit = carstm_model( p=p, DS="carstm_modelled_fit") #,  sppoly = sppoly )
+      fit = carstm_model( p=p, DS="modelled_fit") #,  sppoly = sppoly )
 
       pld = data.table(
         observed =MM[iobs , vn] , 
@@ -400,7 +362,7 @@ Each variable is modelled with the same covariates.
         labs(caption=anno1, color="slateblue") +
         theme( plot.caption = element_text(hjust = 0, size=12 ) )# move caption to the left 
       fn = file.path(outputdir, "posterior_predictive_check.png" )
-      ggsave(filename=fn, plot=out, device="png", width=12, height = 8)
+      ggsave(filename=fn, plot=out,  width=12, height = 8)
       print(out)    
 
       fit  = MM = NULL; gc()
@@ -535,7 +497,7 @@ Convolution is straightforward as it is operating upon joint posterior simulatio
         theme( legend.position=c(0.75, 0.9), legend.title=element_blank()) +
         scale_y_break(c(14, 28), scales = 1)
         # scale_y_continuous( limits=c(0, 300) )  
-        ggsave(filename=fn, plot=out, device="png", width=12, height = 8)
+        ggsave(filename=fn, plot=out,  width=12, height = 8)
 
         print(out)
             # map it ..mean density
@@ -582,7 +544,7 @@ Convolution is straightforward as it is operating upon joint posterior simulatio
         theme_light( base_size = 22) + 
         theme( legend.position=c(0.75, 0.9), legend.title=element_blank()) 
         # scale_y_continuous( limits=c(0, 300) )  
-        ggsave(filename=fn, plot=out, device="png", width=12, height = 8)
+        ggsave(filename=fn, plot=out,  width=12, height = 8)
 
         print(out)
     
