--- a/inst/markdown/snowcrab_sar.rmd
+++ b/inst/markdown/snowcrab_sar.rmd
@@ -103,7 +103,7 @@ Note interpretation of results will need to be tweaked/altered.
   setorderv(counts, "Frequency", order=-1)
   
   # species composition
-  psp = speciescomposition_parameters( yrs=p$yrs, runlabel="1999_present" )
+  psp = speciescomposition_parameters( yrs=p$yrs, carstm_model_label="default" )
   pca = speciescomposition_db( DS="pca", p=psp )  
 
   pcadata = as.data.frame( pca$loadings )
@@ -464,7 +464,7 @@ The fishable **biomass index** (statistically adjusted for covariates and autoco
 
 
 ```{r fbindex-map, echo=FALSE, out.width='45%', fig.show='hold', fig.align='center', fig.cap= 'Biomass index log10(t/km$^2$)  predicted from the Snow Crab survey.' }
-loc = file.path( SCD, 'modelled', '1999_present_fb', 'predicted_biomass_densities' )
+loc = file.path( SCD, 'modelled', 'default_fb', 'predicted_biomass_densities' )
 yrsplot =  year.assessment + c(0:-10)
 fn10 = file.path( loc, paste( 'biomass', yrsplot[10], 'png', sep='.') )
 fn9 = file.path( loc, paste( 'biomass', yrsplot[9], 'png', sep='.') )
@@ -486,7 +486,7 @@ include_graphics( c(  fn2, fn1) )
 
 
 ```{r fbindex-timeseries, out.width='60%', echo=FALSE, fig.align='center', fig.cap = 'The fishable biomass index (t) predicted from the Snow Crab survey. Error bars represent Bayesian 95\\% Credible Intervals. Note large errors in 2020 when there was no survey.' }
-include_graphics( file.path( SCD, 'modelled', '1999_present_fb', 'predicted_biomass_densities', 'biomass_M0.png') )
+include_graphics( file.path( SCD, 'modelled', 'default_fb', 'predicted_biomass_densities', 'biomass_M0.png') )
 # \@ref(fig:fbindex-timeseries)
 ```
 
@@ -606,7 +606,7 @@ include_graphics( file.path( SCD, 'assessments', year.assessment, 'timeseries', 
 
 ```{r bottom-temperatures-map, out.width='45%', echo=FALSE, fig.show='hold', fig.align='center', fig.cap = 'Spatial variations in bottom temperature estimated from a historical analysis of temperature data for 1 September.' }
 
-loc = file.path( data_root, 'aegis', 'temperature', 'maps', '1999_present' )
+loc = file.path( data_root, 'aegis', 'temperature', 'maps', 'default' )
 yrsplot =  year.assessment + c(0:-10)
 fn10 = file.path( loc, paste( 'Bottom-temperature-',  yrsplot[10], '-0.75',  '.png', sep='') )
 fn9  = file.path( loc, paste( 'Bottom-temperature-',  yrsplot[9],  '-0.75',  '.png', sep='') )
@@ -630,7 +630,7 @@ Snow Crab being cold water stenotherms, stability of environmental conditions is
  
 
 ```{r fb-habitat-timeseries, out.width='60%', echo=FALSE,   fig.align='center', fig.cap = 'Habitat viability (probability; fishable Snow Crab). Means and 95\\% Credible Intervals are presented.' }
-loc = file.path( SCD, 'modelled', '1999_present_fb', 'aggregated_habitat_timeseries' )
+loc = file.path( SCD, 'modelled', 'default_fb', 'aggregated_habitat_timeseries' )
 include_graphics( file.path( loc, 'habitat_M0.png') )
 # \@ref(fig:fb-habitat-timeseries)
 ```
@@ -638,7 +638,7 @@ include_graphics( file.path( loc, 'habitat_M0.png') )
  
 
 ```{r fb-habitat-map, out.width='45%', fig.show='hold', fig.align='center', fig.cap= 'Habitat viability (probability; fishable Snow Crab).' }
-loc = file.path( SCD, 'modelled', '1999_present_fb', 'predicted.presence_absence' )
+loc = file.path( SCD, 'modelled', 'default_fb', 'predicted.presence_absence' )
 yrsplot =  year.assessment + c(0:-10)
 fn10 = file.path( loc, paste( 'Predicted_presence_absence_', yrsplot[10], '.png', sep='') )
 fn9 = file.path( loc, paste( 'Predicted_presence_absence_', yrsplot[9], '.png', sep='') )
