--- a/inst/markdown/03.biomass_index_carstm.md
+++ b/inst/markdown/03.biomass_index_carstm.md
@@ -156,9 +156,10 @@ Each variable is modelled with the same covariates.
     # number 
     res = NULL; gc()
     res = carstm_model( p=pN, data=M[ iq, ], sppoly=sppoly, 
-      theta=c( 2.409, 1.874, 0.772, 2.092, -1.490, 5.145, 4.509, 2.178, 5.453, 0.182, 2.742, 0.525, 0.051, 0.779 ),
+      theta=c( 2.7291,1.8146,2.9382,0.0132,3.8666,-0.0211,4.2673,5.5037,6.1421,0.2391,4.2522,0.7666,-0.0100,0.8763 ),
       nposteriors=5000,
-      posterior_simulations_to_retain=c( "summary", "random_spatial", "predictions"), 
+      toget = c("summary", "random_spatial", "predictions"),
+      posterior_simulations_to_retain = c("predictions"),
       family = "poisson",
       verbose=TRUE,
       # redo_fit=FALSE, 
@@ -168,7 +169,7 @@ Each variable is modelled with the same covariates.
     )
 
     # posterior predictive check
-    carstm_posterior_predictive_check(p=p, M=M[ iq, ]  )
+    carstm_posterior_predictive_check(p=pN, M=M[ iq, ]  )
 
     # EXAMINE POSTERIORS AND PRIORS
     res = carstm_model(  p=pN, DS="carstm_summary" )  # parameters in p and summary
@@ -183,19 +184,22 @@ Each variable is modelled with the same covariates.
     # mean size
     res = NULL; gc()
     res = carstm_model( p=pW, data=M[ iw, ], sppoly = sppoly, 
-      theta=c( 6.108, 8.632, 0.883, 2.946, 9.801, 7.265, 10.726, 12.214, 11.849, 9.826, 6.556, 3.456, 5.832, 2.939, 1.625 ),
+      theta=c( 6.0911, 8.6746, 0.9708, 11.4664, -0.0007, 10.6392, 6.7992, 11.4451, 12.4703, 11.5656, 6.6841, 3.4669, 5.8501, 3.1671, 1.7484 
+      ),
       nposteriors=5000,
-      posterior_simulations_to_retain=c( "summary", "random_spatial", "predictions"), 
+      toget = c("summary", "random_spatial", "predictions"),
+      posterior_simulations_to_retain = c("predictions"),
       family =  "gaussian",
       verbose=TRUE,
       # redo_fit=FALSE, 
       # debug = "summary",
-      # control.inla = list( strategy="laplace", int.strategy="eb" ),  
+      control.inla = list( strategy="laplace", optimiser="gsl", restart=1 ),  # gsl = gsl::bfgs2
+      control.mode = list( restart=TRUE ),
       num.threads="4:3" 
     ) 
 
     # posterior predictive check
-    carstm_posterior_predictive_check(p=p, M=M[ iw, ]  )
+    carstm_posterior_predictive_check(p=pW, M=M[ iw, ]  )
 
     # EXAMINE POSTERIORS AND PRIORS
     res = carstm_model(  p=pW, DS="carstm_summary" )  # parameters in p and summary
@@ -210,12 +214,14 @@ Each variable is modelled with the same covariates.
     # model pa using all data
     res = NULL; gc()
     res = carstm_model( p=pH, data=M, sppoly=sppoly, 
-      theta = c( 0.926, 1.743, -0.401, 0.705, -2.574, 1.408, 2.390, 3.459, 3.321, -2.138, 3.083, -1.014, 3.558, 2.703 ),
+      theta = c( 0.8917, 2.0052, 4.5021, -0.0000, 1.5400, -2.4689, 1.1762, 2.6536, 2.9546, -2.1406, 3.5352, -0.7465, 3.2443, 2.4420 
+      ),
       nposteriors=5000,
-      posterior_simulations_to_retain=c( "summary", "random_spatial", "predictions"), 
+      toget = c("summary", "random_spatial", "predictions"),
+      posterior_simulations_to_retain = c("predictions"),
       family = "binomial",  # "binomial",  # "nbinomial", "betabinomial", "zeroinflatedbinomial0" , "zeroinflatednbinomial0"
       verbose=TRUE,
-      #redo_fit=FALSE, 
+      # redo_fit=FALSE, 
       # debug = "summary",
       # control.family=list(control.link=list(model="logit")),  # default for binomial .. no need to specify
       # control.inla = list( strategy="laplace", int.strategy="eb" ),
@@ -223,7 +229,7 @@ Each variable is modelled with the same covariates.
     )
  
     # posterior predictive check
-    carstm_posterior_predictive_check(p=p, M=M[ , ]  )
+    carstm_posterior_predictive_check(p=pH, M=M[ , ]  )
 
     # EXAMINE POSTERIORS AND PRIORS
     res = carstm_model(  p=pH, DS="carstm_summary" )  # parameters in p and summary
@@ -233,9 +239,7 @@ Each variable is modelled with the same covariates.
       o = carstm_prior_posterior_compare( hypers=res$hypers, all.hypers=res$all.hypers, vn=names(res$hypers)[i] )  
       dev.new(); print(o)
     }     
-
-  
-
+ 
   # end spatiotemporal model
 
   # some maps and plots
@@ -274,7 +278,7 @@ Each variable is modelled with the same covariates.
         fn_root =  "Predicted_presence_absence_persistent_spatial_effect" 
         outfilename = file.path( outputdir, paste(fn_root, "png", sep=".") )
         title= paste( snowcrab_filter_class, "Probability")  
-
+      }
           #   # to compute habitat prob
           #   sims = carstm_posterior_simulations( pH=pH, pa_threshold=0.05, qmax=0.95 )
           #   SM = aggregate_simulations( 
@@ -290,10 +294,8 @@ Each variable is modelled with the same covariates.
           #   fn_ts = "habitat_M0.png"
           #   vn = paste("habitat", "predicted", sep=".")
           #   outputdir2 = file.path( carstm_filenames( pN, returnvalue="output_directory"), "predicted_habitat" )
-
-
+ 
       
-      }
 
    
       # to load currently saved results
@@ -311,62 +313,14 @@ Each variable is modelled with the same covariates.
       # maps of some of the results
       outputdir = file.path(p$data_root, p$carstm_model_label, "maps" )
        
-      carstm_plot_map( p, outputdir, fn_root_prefix , additional_features, 
-        toplot="random_spatial", probs=c(0, 0.975) ) 
+      carstm_plot_map( p=p, outputdir=outputdir, fn_root_prefix=fn_root_prefix , additional_features=additional_features, 
+        toplot="random_spatial", probs=c(0.025, 0.975) ) 
    
-      carstm_plot_map( p, outputdir, fn_root_prefix , additional_features, 
+      carstm_plot_map( p=p, outputdir=outputdir, fn_root_prefix=fn_root_prefix , additional_features=additional_features, 
         toplot="predictions", probs=c(0.1, 0.9)) 
     
   
-
-      # posterior predictive check
-      #vns ="number"
-      #vns ="meansize"
-      #vns ="habitat"
-      
-      if ( vns=="number" ) {
-        MM = M[iq,]
-        iobs = which(MM$tag == "observations")
-        vn = "totno"
-        p = pN
-        outputdir = file.path( p$modeldir, p$carstm_model_label, "predicted.numerical.densities" )
-      } 
-      if ( vns=="meansize" ) {
-        MM = M[iw,]
-        iobs = which(MM$tag == "observations")
-        vn = "meansize"
-        p = pW
-        outputdir = file.path( p$modeldir, p$carstm_model_label, "predicted.meansize" )
-      }
-      if ( vns=="habitat") {
-        MM = M
-        iobs = which(MM$tag == "observations")
-        vn = "pa"
-        p = pH
-        outputdir = file.path( p$modeldir, p$carstm_model_label, "predicted.presence_absence" )
-      }
-
-      fit = NULL; gc()
-      fit = carstm_model( p=p, DS="modelled_fit") #,  sppoly = sppoly )
-
-      pld = data.table(
-        observed =MM[iobs , vn] , 
-        fitted = fit$summary.fitted.values[["mean"]] [iobs]
-      )
-      anno1 = paste( "Pearson correlation: ", round( cor( pld$fitted, pld$observed, use="pairwise.complete.obs" ), 3))
-      # cor( fitted, observed, use="pairwise.complete.obs", "spearman" )
-
-      out = ggplot(pld, aes(x = jitter(observed), y = fitted )) +
-        geom_abline(slope=1, intercept=0, color="darkgray", lwd=1.4 ) +
-        geom_point(color="slategray") +
-        labs(caption=anno1, color="slateblue") +
-        theme( plot.caption = element_text(hjust = 0, size=12 ) )# move caption to the left 
-      fn = file.path(outputdir, "posterior_predictive_check.png" )
-      ggsave(filename=fn, plot=out,  width=12, height = 8)
-      print(out)    
-
-      fit  = MM = NULL; gc()
-
+ 
 }
 
 
@@ -391,7 +345,8 @@ Convolution is straightforward as it is operating upon joint posterior simulatio
   regions = c("cfanorth", "cfasouth",  "cfa4x" )
   region_label = c("N-ENS", "S-ENS", "4X")
   color_map = c("#E69F00", "#56B4E9",  "#CC79A7" )  
-
+  
+  additional_features = snowcrab_mapping_features(pN)  
   sppoly = areal_units( p=pN )  # to reload
 
   for ( vns in c("abundance", "habitat") ) {
@@ -597,7 +552,7 @@ The fishery model used for stock assessment is the biomass dynamics model. It is
   fishery_model_label = "turing1"
 
   carstm_results_directory = file.path( pN$modeldir, pN$carstm_model_label, "fishery_model_results", fishery_model_label ) # default
-
+  
   fishery_model_data_inputs( year.assessment=year.assessment,  type="biomass_dynamics", for_julia=TRUE, 
     save_location=carstm_results_directory, fishery_model_label=fishery_model_label  ) 
 
