leftover aegis_lookup transition

--- a/inst/markdown/03.biomass_index_carstm.md
+++ b/inst/markdown/03.biomass_index_carstm.md
@@ -154,8 +154,7 @@ Each variable is modelled with the same covariates.
     iw = unique( c( which( M$totno > 5), ip ) )  # need a good sample to estimate mean size
  
     # number 
-    res = NULL; gc()
-    res = carstm_model( p=pN, data=M[ iq, ], sppoly=sppoly, 
+    carstm_model( p=pN, data=M[ iq, ], sppoly=sppoly, 
       theta=c( 2.7291,1.8146,2.9382,0.0132,3.8666,-0.0211,4.2673,5.5037,6.1421,0.2391,4.2522,0.7666,-0.0100,0.8763 ),
       nposteriors=5000,
       toget = c("summary", "random_spatial", "predictions"),
@@ -178,14 +177,13 @@ Each variable is modelled with the same covariates.
     for (i in 1:length(names(res$hypers)) ){
       o = carstm_prior_posterior_compare( hypers=res$hypers, all.hypers=res$all.hypers, vn=names(res$hypers)[i] )  
       dev.new(); print(o)
-    }     
+    }   
 
 
-    # mean size
-    res = NULL; gc()
-    res = carstm_model( p=pW, data=M[ iw, ], sppoly = sppoly, 
-      theta=c( 6.0911, 8.6746, 0.9708, 11.4664, -0.0007, 10.6392, 6.7992, 11.4451, 12.4703, 11.5656, 6.6841, 3.4669, 5.8501, 3.1671, 1.7484 
-      ),
+
+    # mean size 
+    carstm_model( p=pW, data=M[ iw, ], sppoly = sppoly, 
+      # theta=c( 6.0911, 8.6746, 0.9708, 11.4664, -0.0007, 10.6392, 6.7992, 11.4451, 12.4703, 11.5656, 6.6841, 3.4669, 5.8501, 3.1671, 1.7484 ),
       nposteriors=5000,
       toget = c("summary", "random_spatial", "predictions"),
       posterior_simulations_to_retain = c("predictions"),
@@ -193,8 +191,9 @@ Each variable is modelled with the same covariates.
       verbose=TRUE,
       # redo_fit=FALSE, 
       # debug = "summary",
+      # control.inla = list(  optimiser="gsl" ),
       control.inla = list( strategy="laplace", optimiser="gsl", restart=1 ),  # gsl = gsl::bfgs2
-      control.mode = list( restart=TRUE ),
+      # control.mode = list( restart=TRUE ),
       num.threads="4:3" 
     ) 
 
@@ -209,11 +208,10 @@ Each variable is modelled with the same covariates.
       o = carstm_prior_posterior_compare( hypers=res$hypers, all.hypers=res$all.hypers, vn=names(res$hypers)[i] )  
       dev.new(); print(o)
     }     
-
+ 
 
     # model pa using all data
-    res = NULL; gc()
-    res = carstm_model( p=pH, data=M, sppoly=sppoly, 
+    carstm_model( p=pH, data=M, sppoly=sppoly, 
       theta = c( 0.8917, 2.0052, 4.5021, -0.0000, 1.5400, -2.4689, 1.1762, 2.6536, 2.9546, -2.1406, 3.5352, -0.7465, 3.2443, 2.4420 
       ),
       nposteriors=5000,
@@ -223,6 +221,7 @@ Each variable is modelled with the same covariates.
       verbose=TRUE,
       # redo_fit=FALSE, 
       # debug = "summary",
+      
       # control.family=list(control.link=list(model="logit")),  # default for binomial .. no need to specify
       # control.inla = list( strategy="laplace", int.strategy="eb" ),
       num.threads="4:3"
@@ -239,7 +238,7 @@ Each variable is modelled with the same covariates.
       o = carstm_prior_posterior_compare( hypers=res$hypers, all.hypers=res$all.hypers, vn=names(res$hypers)[i] )  
       dev.new(); print(o)
     }     
- 
+  
   # end spatiotemporal model
 
   # some maps and plots
@@ -318,10 +317,8 @@ Each variable is modelled with the same covariates.
    
       carstm_plot_map( p=p, outputdir=outputdir, fn_root_prefix=fn_root_prefix , additional_features=additional_features, 
         toplot="predictions", probs=c(0.1, 0.9)) 
-    
   
- 
-}
+  }
 
 
 ```
@@ -449,7 +446,7 @@ Convolution is straightforward as it is operating upon joint posterior simulatio
         scale_fill_manual(values=color_map) +
         scale_shape_manual(values = c(15, 17, 19)) +
         theme_light( base_size = 22) + 
-        theme( legend.position=c(0.75, 0.9), legend.title=element_blank()) +
+        theme( legend.position.inside=c(0.75, 0.9), legend.title=element_blank()) +
         scale_y_break(c(14, 28), scales = 1)
         # scale_y_continuous( limits=c(0, 300) )  
         ggsave(filename=fn, plot=out,  width=12, height = 8)
@@ -476,7 +473,7 @@ Convolution is straightforward as it is operating upon joint posterior simulatio
           carstm_map(  sppoly=sppoly, vn=vn,
               breaks=brks,
               additional_features=additional_features,
-              legend.position=c( 0.1, 0.9 ),
+              legend.position.inside=c( 0.1, 0.9 ),
               annotation=y,
               # annotation=paste( "log_10( Predicted biomass density; kg/km^2 )", y ),
               colors=rev(RColorBrewer::brewer.pal(5, "RdYlBu")),
@@ -497,7 +494,7 @@ Convolution is straightforward as it is operating upon joint posterior simulatio
         scale_fill_manual(values=color_map) +
         scale_shape_manual(values = c(15, 17, 19)) +
         theme_light( base_size = 22) + 
-        theme( legend.position=c(0.75, 0.9), legend.title=element_blank()) 
+        theme( legend.position.inside=c(0.75, 0.9), legend.title=element_blank()) 
         # scale_y_continuous( limits=c(0, 300) )  
         ggsave(filename=fn, plot=out,  width=12, height = 8)
 
@@ -522,7 +519,7 @@ Convolution is straightforward as it is operating upon joint posterior simulatio
           carstm_map(  sppoly=sppoly, vn=vn,
               breaks=brks,
               additional_features=additional_features,
-              legend.position=c( 0.1, 0.9 ),
+              legend.position.inside=c( 0.1, 0.9 ),
               annotation=y,
               # annotation=paste( "log_10( Predicted biomass density; kg/km^2 )", y ),
               colors=rev(RColorBrewer::brewer.pal(5, "RdYlBu")),
